syntax = "proto2";

package bhuhot.service;

option java_package = "com.bbuhot.server.service";
option java_multiple_files = true;

message AuthRequest {
  optional string auth = 1;
  optional string salt_key = 2;
}

message AuthReply {
  enum AuthErrorCode {
    // No error.
    NO_ERROR = 0;

    // The user's auth and saltKey doesn't match the record.
    KEY_NOT_MATCHING = 1;

    // The user doesn't have the right permission to do so.
    PERMISSION_DENY = 2;
  }

  // The error code.
  required AuthErrorCode error_code = 1;

  message User {
    required int32 uid = 1;
    required string name = 2;
  }

  // Information of the user.
  optional User user = 2;
}
